<resources>
    <string name="app_name">Legemus</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Library</string>
    <string name="title_dashboard">Discover</string>
    <string name="title_notifications">Community</string>
    <string name="learn">Learn</string>
    <string name="profile">Profile</string>
    <string name="discover">Discover</string>
    <string name="featured">Featured</string>
    <string name="categories">Categories</string>
    <string name="challenges">Challenges</string>
    <string name="math_and_science"><![CDATA[Math & Science]]></string>
    <string name="politics">Politics</string>
    <string name="philosophy">Philosophy</string>
    <string name="poetry">Poetry</string>
    <string name="plays">Plays</string>
    <string name="likedBooks">Liked</string>
    <string name="recentBooks">Recent</string>
    <string name="bookSummaries">Summaries</string>
    <string name="bookDownloads">Downloads</string>
    <string name="friendsList">Friends</string>
    <string name="groupsList">Groups</string>
    <string name="discussionsList">Discussions</string>
</resources>